# python-poetry-example

./: .gitignore  README.md  pyproject.toml
python_poetry_example/: console.py
pythonpoetryexample/: console.py
pythonpoetryexample/pages/apollo/: apollologin.py
src/python_poetry_example/: console.py
src/tests/: test_console.py
tests/: test_console.py
