[tool.poetry]
name = "python-poetry-example"
version = "0.1.0"
description = "A poetry example repository used for experimentation"
authors = ["Robert Stagner <robert.stagner@disney.com>"]
readme = "README.md"
packages = [{include = "python_poetry_example"}]
homepage = "https://github.com/restagner/python-poetry-example"
repository = "https://github.com/restagner/python-poetry-example"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
python-poetry-example = "python_poetry_example.console:hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
